# Stepik-Travel

./: LICENSE  pyproject.toml
app/: app.py  consts.py  filters.py
app/templates/: base.html  departure.html  index.html  page_not_found.html  tour.html
