[tool.poetry]
name = "first_project"
version = "0.1.0"
description = ""
authors = ["Alexander Erdyakov <sa@prg.re>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
pymorphy2 = "^0.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
